--- a/style.css
+++ b/style.css
@@ -1,32 +1,62 @@
 .is-active {
-	color:black;
+  color: black;
 }
-.center{
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	text-align: center;
+.center {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
 }
-.center-img{
-	display: flex;
-	justify-content: center;
-	margin: 0 auto;
+.center-img {
+  display: flex;
+  justify-content: center;
+  margin: 0 auto;
 }
-.overflow{
-	overflow:hidden;
+.overflow {
+  overflow: hidden;
 }
 .google-data-studio {
-	position: relative;
-	padding-bottom: 56.25%;
-	padding-top: 30px; height: 0; overflow: hidden;
-	}
-	
-	.google-data-studio iframe,
-	.google-data-studio object,
-	.google-data-studio embed {
-	position: absolute;
-	top: 0;
-	left: 0;
-	width: 100%;
-	height: 100%;
-	}
+  position: relative;
+  padding-bottom: 56.25%;
+  padding-top: 30px;
+  height: 0;
+  overflow: hidden;
+}
+
+.google-data-studio iframe,
+.google-data-studio object,
+.google-data-studio embed {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
+/*------------------------------*/
+#element-perf {
+  display: none;
+}
+#element-perf:checked ~ #perf {
+  display: flex;
+}
+/*------------------------------*/
+#element-credits {
+  display: none;
+}
+#element-credits:checked ~ #credits {
+  display: flex;
+}
+/*------------------------------*/
+#element-incomplete {
+  display: none;
+}
+#element-incomplete:checked ~ #incomplete {
+  display: flex;
+}
+/*------------------------------*/
+#element-warnings {
+  display: none;
+}
+#element-warnings:checked ~ #warnings {
+  display: flex;
+}
