--- a/style.css
+++ b/style.css
@@ -62,6 +62,13 @@ body {
 #element-warnings:checked ~ #warnings {
   display: flex;
 }
+/*------------------------------*/
+#element-compliments {
+  display: none;
+}
+#element-compliments:checked ~ #compliments {
+  display: flex;
+}
 /*------------------------------------------*/
 .center {
   display: flex;
@@ -70,68 +77,12 @@ body {
   text-align: center;
 }
 /*-------------------Footer----------------------*/
-.footer-description {
-  font-size: 14px;
-  line-height: 24px;
-  margin: 10px 0 0 0;
-}
-
-.social-links a {
-  background: #0073d1;
-  color: #fff;
-  margin-right: 5px;
-  border-radius: 50px;
-  text-align: center;
-  width: 40px;
-  height: 40px;
-  transition: 0.3s;
+.equal-height{
   display: flex;
-  justify-content: center;
-  align-items: center;
-  cursor: pointer;
+  flex-direction: column;
+  height: 100%;
 }
-
-.social-links a:hover {
-  background: #65acdb;
-  color: black;
-  text-decoration: none;
-}
-
-.social-links .icon {
-  width: 18px;
-  height: 18px;
-}
-
-.footer-nav ul {
-  list-style: none;
-  padding: 0;
-  margin: 0;
-}
-
-.footer-nav i {
-  color: #00d1b2;
-  width: 18px;
-  height: 18px;
-  margin: 0 2px 0 -5px;
-}
-
-.footer-nav li {
-  padding: 6px 0;
-  display: flex;
-  align-items: center;
-}
-
-.footer-nav li:first-child {
-  padding-top: 0;
-}
-
-.footer-nav a {
-  transition: 0.3s;
-  font-size: 15px;
-  color: #363636;
-}
-
-.footer-nav a:hover {
-  color: #3273dc;
-  text-decoration: none;
+.equal-height img{
+  border-radius: 0.5rem;
+  margin: 0 auto;
 }
