--- a/style.css
+++ b/style.css
@@ -111,8 +111,9 @@ body {
 section {
   border-radius: 0.3rem;
 }
-@media (max-width:500px){
-  #new img{
-    max-width:250;
+@media screen and (max-width: 600px) {
+  #news img {
+    max-width: 300px !important;
   }
 }
+  
