--- a/style.css
+++ b/style.css
@@ -9,6 +9,7 @@ body {
   justify-content: center;
   align-items: center;
   text-align: center;
+  margin:0 auto;
 }
 .center-img {
   display: flex;
