--- a/style.css
+++ b/style.css
@@ -150,3 +150,8 @@ article,
 .modal-content{
   max-width:1000px !important;
 }
+.card:hover,.box:hover {
+  box-shadow:-15px 5px 5px rgba(0, 0, 0, .25);
+  transform: scale(1.01);
+  cursor:grab;
+}
