--- a/style.css
+++ b/style.css
@@ -226,6 +226,17 @@ article,
 form {
   border-radius: 0.5rem;
 }
+.navbar-burger{
+	animation:pulse 2s infinite;
+}
+@keyframes pulse{
+	0%{
+		opacity: 0.7;	
+	}
+	100%{
+		opacity: 0.2;
+	}
+}
 /*------------------------------------*/
 @media screen and (max-width: 900px) {
   #news img {
