--- a/style.css
+++ b/style.css
@@ -240,7 +240,7 @@ textarea {
 }
 .footer {
   background: #add8e6 !important;
-  margin-bottom: -15%;
+  margin-bottom: -13%;
 }
 .hero-wave {
   background: #eee;
@@ -308,6 +308,55 @@ section {
 .menu-list .is-active a {
   background: #01b1ff;
   color: #000000 !important;
+}
+/* Our Team*/
+.our-team {
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+  max-width: 300px;
+  margin: auto;
+  text-align: center;
+  font-family: arial;
+  background: #add8e6c0 !important;
+}
+
+.our-team .title {
+  color: #000;
+  font-size: 18px;
+}
+
+.our-team button {
+  border: none !important;
+  outline: 0;
+  display: block;
+  padding: 8px;
+  color: white;
+  background-color: #000;
+  text-align: center;
+  cursor: pointer;
+  width: 100%;
+  height: 0 auto !important;
+  font-size: 18px;
+  border-radius: none !important;
+}
+
+.our-team a {
+  text-decoration: none;
+  font-size: 22px;
+  color: black;
+}
+
+.our-team button:hover,
+a:hover {
+  opacity: 0.7;
+}
+.our-team {
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+}
+.our-team img {
+  border-radius: 0.1rem;
+  margin: 0 auto;
 }
 /*------------------------------------*/
 @media screen and (max-width: 900px) {
