--- a/style.css
+++ b/style.css
@@ -4,7 +4,8 @@ body {
 html {
   scroll-behavior: smooth;
 }
-.hero-foot .is-active a,.hero-foot .is-active {
+.hero-foot .is-active a,
+.hero-foot .is-active {
   color: black;
   background-color: lightblue !important;
 }
@@ -75,6 +76,17 @@ html {
   border-radius: 0.5rem;
   margin: 0 auto;
 }
+#over-section .subtitle span,
+.inner-header h1 span {
+  border-bottom: #ccc 3px solid;
+}
+.over-section .columns,
+.content {
+  border-radius: 0.5rem !important;
+}
+.bottom-overview {
+  background: #bad5e7 !important;
+}
 /*-----------------------------------------*/
 #home1 {
   display: flex;
@@ -142,6 +154,14 @@ article,
   box-shadow: -15px 5px 5px rgba(0, 0, 0, 0.25);
   transform: scale(1.01);
   cursor: grab;
+}
+.footer .column {
+  border-left: #000 2px solid;
+  border-radius: 0 !important;
+}
+.resources {
+  border-right: #000 2px solid;
+  border-radius: 0 !important;
 }
 /*--------------home page------------------*/
 .logo {
@@ -383,6 +403,14 @@ a:hover {
   #team img {
     max-width: 50px !important;
   }
+  .footer .column {
+    border-left: 0 !important;
+    border-radius: 0 !important;
+  }
+  .resources {
+    border-right: 0 !important;
+    border-radius: 0 !important;
+  }
 }
 /*------------Dashboards--------------*/
 .is-fullwidth {
@@ -394,7 +422,13 @@ a:hover {
   min-height: 100px;
   background: #242424 url("./images/preloader.gif") no-repeat 50% center !important;
 }
-
+iframe {
+  overflow: hidden !important;
+}
+.iframe-container::-webkit-scrollbar {
+  width: 0px;
+  height: 0px;
+}
 /*Schedules*/
 ul {
   list-style-type: none;
@@ -487,5 +521,86 @@ ul {
   .weekdays li,
   .days li {
     width: 12.2%;
+  }
+}
+/*--------------OverView---------------*/
+@import url(//fonts.googleapis.com/css?family=Lato:300:400);
+#over h1 {
+  font-family: "Lato", sans-serif;
+  font-weight: 300;
+  letter-spacing: 2px;
+  font-size: 40px;
+}
+
+.overview-left {
+  position: relative;
+  text-align: center;
+  background: linear-gradient(60deg, #0967a1 0%, #3399dc 100%);
+  color: white;
+  border-radius: 0.5rem;
+}
+
+.inner-header {
+  height: 30vh;
+  width: 100%;
+  margin: 0;
+  padding: 0;
+}
+.overview-left svg {
+  border-radius: 0.5rem;
+}
+
+.waves {
+  position: relative;
+  width: 100%;
+  height: 30vh;
+  margin-bottom: -7px; /*Fix for safari gap*/
+  min-height: 100px;
+  max-height: 150px;
+}
+
+/* Animation */
+
+.parallax > use {
+  animation: move-forever 25s cubic-bezier(0.55, 0.5, 0.45, 0.5) infinite;
+}
+.parallax > use:nth-child(1) {
+  animation-delay: -2s;
+  animation-duration: 7s;
+}
+.parallax > use:nth-child(2) {
+  animation-delay: -3s;
+  animation-duration: 10s;
+}
+.parallax > use:nth-child(3) {
+  animation-delay: -4s;
+  animation-duration: 13s;
+}
+.parallax > use:nth-child(4) {
+  animation-delay: -5s;
+  animation-duration: 20s;
+}
+@keyframes move-forever {
+  0% {
+    transform: translate3d(-90px, 0, 0);
+  }
+  100% {
+    transform: translate3d(85px, 0, 0);
+  }
+}
+/*Shrinking for mobile*/
+@media (max-width: 768px) {
+  .waves {
+    height: 40px;
+    min-height: 40px;
+  }
+  .content {
+    height: 30vh;
+  }
+  h1 {
+    font-size: 25px !important;
+  }
+  .inner-header p {
+    font-size: 11px !important;
   }
 }
