--- a/style.css
+++ b/style.css
@@ -247,12 +247,9 @@ article,
   border-radius: 0.5rem;
 }
 .sec-color,
-input,
-textarea {
+.contact-section input,
+.contact-section textarea {
   background: #add8e6c0 !important;
-}
-input,
-textarea {
   border: solid 2px #756464 !important;
 }
 /*Wave*/
@@ -500,20 +497,23 @@ ul {
 }
 
 /* Add media queries for smaller screens */
-@media screen and (max-width: 720px) {
+@media screen and (max-width: 800px) {
   .weekdays li,
   .days li {
     width: 13.1%;
   }
-}
-
-@media screen and (max-width: 420px) {
-  .weekdays li,
-  .days li {
-    width: 12.5%;
+  .perf-tab {
+    display: none !important;
   }
-  .days li .active {
-    padding: 2px;
+
+  @media screen and (max-width: 420px) {
+    .weekdays li,
+    .days li {
+      width: 12.5%;
+    }
+    .days li .active {
+      padding: 2px;
+    }
   }
 }
 
@@ -603,4 +603,22 @@ ul {
   .inner-header p {
     font-size: 11px !important;
   }
+}
+/*-------------Admin Access Pass Box------------- */
+#pass-box,
+#pass-box1,
+#pass-box2,
+#pass-box3 {
+  box-sizing: border-box;
+  height: 20%;
+  width: 25%;
+  position: absolute;
+  top: 35%;
+  left: 50%;
+  border-radius: 0.5rem;
+  display: none;
+  padding: 2% !important;
+}
+#confirm-pass {
+  display: none !important;
 }
