--- a/style.css
+++ b/style.css
@@ -11,11 +11,6 @@ body {
 html {
   scroll-behavior: smooth;
 }
-.hero-foot .is-active a,
-.hero-foot .is-active {
-  color: black;
-  background-color: lightblue !important;
-}
 .center {
   display: flex;
   justify-content: center;
@@ -31,6 +26,39 @@ html {
 .transparent {
   background-color: transparent;
 }
+/*======End Of Body =======*/
+
+/*=========== Hero Section ========*/
+.hero-foot .is-active a,
+.hero-foot .is-active {
+  color: black;
+  background-color: lightblue !important;
+}
+/* ========Forms Drop-Down============*/
+#dropdown {
+  position: relative;
+  color: #fff;
+}
+#dropdown-content {
+  position: absolute;
+  top: 70%;
+  left: -40%;
+  background: #1d72aa;
+  color: white;
+  border-radius: 0.5rem;
+  padding: 0.5rem;
+  display: none;
+}
+#dropdown-content li {
+  border-bottom: 2px #666 solid;
+}
+.forms-content {
+  background: transparent !important;
+  height: 40vw;
+}
+/*=========== End of Hero Section ========*/
+
+/*=========== Overview Cards ========*/
 .card-equal-height {
   display: flex;
   flex-direction: column;
@@ -47,42 +75,6 @@ html {
   border-radius: 0.5rem;
   margin: 0 auto;
 }
-/*-----------------------------------------*/
-.equal-height {
-  display: flex;
-  flex-direction: column;
-  height: 100%;
-}
-.equal-height img {
-  border-radius: 0.5rem;
-  margin: 0 auto;
-}
-/*-----------------------------------------*/
-.is-incentive {
-  display: flex;
-  flex-direction: column;
-  height: 100%;
-}
-.is-incentive img {
-  border-radius: 0.5rem;
-  margin: 0 auto;
-}
-/*-----------------------------------------*/
-.is-incentive-child {
-  display: flex;
-  flex-direction: column;
-  height: 0 auto;
-}
-/*-----------------------------------------*/
-#home {
-  display: flex;
-  flex-direction: column;
-  height: 100%;
-}
-#home img {
-  border-radius: 0.5rem;
-  margin: 0 auto;
-}
 #over-section .subtitle span,
 .inner-header h1 span {
   border-bottom: #ccc 3px solid;
@@ -94,52 +86,69 @@ html {
 .bottom-overview {
   background: #bad5e7 !important;
 }
-/*-----------------------------------------*/
-#home1 {
-  display: flex;
-  flex-direction: column;
-  height: 100%;
+/*--------------OverView---------------*/
+#over h1 {
+  font-family: "Lato", sans-serif;
+  font-weight: 300;
+  letter-spacing: 2px;
+  font-size: 40px;
 }
-#home1 img {
+
+.overview-left {
+  position: relative;
+  text-align: center;
+  background: linear-gradient(60deg, #0967a1 0%, #3399dc 100%);
+  color: white;
   border-radius: 0.5rem;
-  margin: 0 auto;
 }
-/*-----------------------------------------*/
-#news {
-  display: flex;
-  flex-direction: column;
-  height: 100%;
+
+.inner-header {
+  height: 30vh;
+  width: 100%;
+  margin: 0;
+  padding: 0;
 }
-#news img {
-  border-radius: 0.2rem;
-  margin: 0 auto;
+.overview-left svg {
+  border-radius: 0.5rem;
 }
-/*-----------------------------------------*/
-#data {
-  display: flex;
-  flex-direction: column;
-  height: 100%;
+
+.waves {
+  position: relative;
+  width: 100%;
+  height: 30vh;
+  margin-bottom: -7px; /*Fix for safari gap*/
+  min-height: 100px;
+  max-height: 150px;
 }
-#data img {
-  border-radius: 0.2rem;
-  margin: 0 auto;
+
+/* Animation */
+
+.parallax > use {
+  animation: move-forever 25s cubic-bezier(0.55, 0.5, 0.45, 0.5) infinite;
 }
-/*-----------------------------------------*/
-#incentives-top {
-  display: flex;
-  flex-direction: column;
-  height: 100%;
+.parallax > use:nth-child(1) {
+  animation-delay: -2s;
+  animation-duration: 7s;
 }
-.column,
-.columns,
-.column img,
-.container,
-.section,
-.sections,
-section,
-article,
-.media {
-  border-radius: 0.3rem;
+.parallax > use:nth-child(2) {
+  animation-delay: -3s;
+  animation-duration: 10s;
+}
+.parallax > use:nth-child(3) {
+  animation-delay: -4s;
+  animation-duration: 13s;
+}
+.parallax > use:nth-child(4) {
+  animation-delay: -5s;
+  animation-duration: 20s;
+}
+@keyframes move-forever {
+  0% {
+    transform: translate3d(-90px, 0, 0);
+  }
+  100% {
+    transform: translate3d(85px, 0, 0);
+  }
 }
 /*--------------------------------------*/
 #top {
@@ -162,6 +171,215 @@ article,
   transform: scale(1.01);
   cursor: grab;
 }
+
+/*=========== End of overview Section ========*/
+
+/* ==========Performances =============*/
+.dashboard {
+  position: -webkit-sticky !important; /* Safari */
+  position: sticky !important;
+  top: 0 !important;
+}
+aside li a {
+  color: white !important;
+  border-left: solid 2px black !important;
+  margin: 5px;
+  transition: background-color 1s, margin-left 0.5s;
+}
+aside li a:hover {
+  color: black !important;
+  margin-left: 2px !important;
+}
+aside p {
+  color: rgb(41, 37, 37) !important;
+}
+.dash1,
+.dash1 iframe,
+.container,
+section,
+.iframe-container {
+  border-radius: 0.3rem !important;
+}
+.w3-modal-content,
+iframe,
+embed {
+  border-radius: 0.5rem !important;
+}
+.menu-list .is-active1 a,
+li .is-active1 {
+  background: #01b1ff !important;
+  color: #000000 !important;
+}
+/*------------Dashboards--------------*/
+.is-fullwidth {
+  margin: 0;
+  padding: 1px !important;
+  border: 0;
+}
+.iframe-container {
+  min-height: 100px;
+  background: #242424 url("./images/preloader.gif") no-repeat 50% center !important;
+}
+iframe {
+  overflow: hidden !important;
+}
+.iframe-container::-webkit-scrollbar {
+  width: 0px;
+  height: 0px;
+}
+/*-------------Admin Access Pass Box------------- */
+#pass-box,
+#pass-box1,
+#pass-box2,
+#pass-box3 {
+  box-sizing: border-box;
+  height: 20%;
+  width: 25%;
+  position: absolute;
+  top: 35%;
+  left: 50%;
+  border-radius: 0.5rem;
+  display: none;
+  padding: 2% !important;
+}
+#confirm-pass {
+  display: none !important;
+}
+/* Delete Button*/
+.delete {
+  float: right;
+}
+/* ==========Performances =============*/
+
+/*=========== Projects Cards========*/
+.equal-height {
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+}
+.equal-height img {
+  border-radius: 0.5rem;
+  margin: 0 auto;
+}
+/*===========End of Projects Cards ========*/
+
+/*---------------Incentives-------------------------*/
+.is-incentive {
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+}
+.is-incentive img {
+  border-radius: 0.5rem;
+  margin: 0 auto;
+}
+.is-incentive-child {
+  display: flex;
+  flex-direction: column;
+  height: 0 auto;
+}
+#incentives-top {
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+}
+.column,
+.columns,
+.column img,
+.container,
+.section,
+.sections,
+section,
+article,
+.media {
+  border-radius: 0.3rem;
+}
+/*=========== End of incentives ========*/
+
+/*===========Schedules===========*/
+ul {
+  list-style-type: none;
+  box-sizing: border-box;
+}
+
+.month {
+  padding: 70px 25px;
+  width: 100%;
+  background: #1a89bc;
+  text-align: center;
+}
+
+.month ul {
+  margin: 0;
+  padding: 0;
+}
+
+.month ul li {
+  color: white;
+  font-size: 20px;
+  text-transform: uppercase;
+  letter-spacing: 3px;
+}
+
+.month .prev {
+  float: left;
+  padding-top: 10px;
+}
+
+.month .next {
+  float: right;
+  padding-top: 10px;
+}
+
+.weekdays {
+  margin: 0;
+  padding: 10px 0;
+  background-color: #ddd;
+}
+
+.weekdays li {
+  display: inline-block;
+  width: 13.6%;
+  color: #666;
+  text-align: center;
+}
+
+.days {
+  padding: 10px 0;
+  background: #eee;
+  margin: 0;
+}
+
+.days li {
+  list-style-type: none;
+  display: inline-block;
+  width: 13.6%;
+  text-align: center;
+  margin-bottom: 5px;
+  font-size: 12px;
+  color: #777;
+}
+
+.days li .active {
+  padding: 5px;
+  background: #1abc9c;
+  color: white !important;
+}
+/*==========End of Schedules=========*/
+
+/*=========== Newsletter ========*/
+#news {
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+}
+#news img {
+  border-radius: 0.2rem;
+  margin: 0 auto;
+}
+/*------------------End of Newsletter-----------------------*/
+
+/*==========Footer =========*/
 .footer .column {
   border-left: #000 2px solid;
   border-radius: 0 !important;
@@ -170,6 +388,29 @@ article,
   border-right: #000 2px solid;
   border-radius: 0 !important;
 }
+/*=======Footer ======*/
+
+/*-----------------Index.hmtl Style------------------------*/
+#home {
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+}
+#home img {
+  border-radius: 0.5rem;
+  margin: 0 auto;
+}
+#home1 {
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+}
+#home1 img {
+  border-radius: 0.5rem;
+  margin: 0 auto;
+}
+/*-----------------------------------------*/
+
 /*--------------home page------------------*/
 .logo {
   border: solid 2px white;
@@ -290,11 +531,6 @@ article,
   background: #add8e6 !important;
   margin-top: -10% !important;
 }
-.w3-modal-content,
-iframe,
-embed {
-  border-radius: 0.5rem !important;
-}
 /*-----------------------------*/
 #form {
   margin-top: -1% !important;
@@ -314,37 +550,6 @@ form {
   }
 }
 
-/* Performances */
-.dashboard {
-  position: -webkit-sticky !important; /* Safari */
-  position: sticky !important;
-  top: 0 !important;
-}
-aside li a {
-  color: white !important;
-  border-left: solid 2px black !important;
-  margin: 5px;
-  transition: background-color 1s, margin-left 0.5s;
-}
-aside li a:hover {
-  color: black !important;
-  margin-left: 2px !important;
-}
-aside p {
-  color: rgb(41, 37, 37) !important;
-}
-.dash1,
-.dash1 iframe,
-.container,
-section,
-.iframe-container {
-  border-radius: 0.3rem !important;
-}
-.menu-list .is-active1 a,
-li .is-active1 {
-  background: #01b1ff !important;
-  color: #000000 !important;
-}
 /* Our Team*/
 .our-team {
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
@@ -378,6 +583,8 @@ a:hover {
   margin: 0 auto;
 }
 /*------------------------------------*/
+
+/* ===============================Media Queries=================*/
 @media screen and (max-width: 900px) {
   #news img {
     max-width: 300px !important;
@@ -416,94 +623,33 @@ a:hover {
     border-radius: 0 !important;
   }
 }
-/*------------Dashboards--------------*/
-.is-fullwidth {
-  margin: 0;
-  padding: 1px !important;
-  border: 0;
+/* Overview wave Shrinking for mobile*/
+@media (max-width: 768px) {
+  .waves {
+    height: 40px;
+    min-height: 40px;
+  }
+  .content {
+    height: 30vh;
+  }
+  h1 {
+    font-size: 25px !important;
+  }
+  .inner-header p {
+    font-size: 11px !important;
+  }
 }
-.iframe-container {
-  min-height: 100px;
-  background: #242424 url("./images/preloader.gif") no-repeat 50% center !important;
-}
-iframe {
-  overflow: hidden !important;
-}
-.iframe-container::-webkit-scrollbar {
-  width: 0px;
-  height: 0px;
-}
-/*Schedules*/
-ul {
-  list-style-type: none;
-  box-sizing: border-box;
-}
-
-.month {
-  padding: 70px 25px;
-  width: 100%;
-  background: #1a89bc;
-  text-align: center;
+/*Dashboads Media screen */
+@media screen and (max-width: 1406px) {
+  #dashboard-container {
+    height: 55vh !important;
+  }
+  #sidenav li {
+    font-size: 0.8rem;
+  }
 }
 
-.month ul {
-  margin: 0;
-  padding: 0;
-}
-
-.month ul li {
-  color: white;
-  font-size: 20px;
-  text-transform: uppercase;
-  letter-spacing: 3px;
-}
-
-.month .prev {
-  float: left;
-  padding-top: 10px;
-}
-
-.month .next {
-  float: right;
-  padding-top: 10px;
-}
-
-.weekdays {
-  margin: 0;
-  padding: 10px 0;
-  background-color: #ddd;
-}
-
-.weekdays li {
-  display: inline-block;
-  width: 13.6%;
-  color: #666;
-  text-align: center;
-}
-
-.days {
-  padding: 10px 0;
-  background: #eee;
-  margin: 0;
-}
-
-.days li {
-  list-style-type: none;
-  display: inline-block;
-  width: 13.6%;
-  text-align: center;
-  margin-bottom: 5px;
-  font-size: 12px;
-  color: #777;
-}
-
-.days li .active {
-  padding: 5px;
-  background: #1abc9c;
-  color: white !important;
-}
-
-/* Add media queries for smaller screens */
+/* ========== Schedules Add media queries for smaller screens ========== */
 @media screen and (max-width: 800px) {
   .weekdays li,
   .days li {
@@ -522,6 +668,10 @@ ul {
       padding: 2px;
     }
   }
+  #perf,
+  #perf-btn {
+    display: none !important;
+  }
 }
 
 @media screen and (max-width: 290px) {
@@ -529,137 +679,4 @@ ul {
   .days li {
     width: 12.2%;
   }
-}
-/*--------------OverView---------------*/
-#over h1 {
-  font-family: "Lato", sans-serif;
-  font-weight: 300;
-  letter-spacing: 2px;
-  font-size: 40px;
-}
-
-.overview-left {
-  position: relative;
-  text-align: center;
-  background: linear-gradient(60deg, #0967a1 0%, #3399dc 100%);
-  color: white;
-  border-radius: 0.5rem;
-}
-
-.inner-header {
-  height: 30vh;
-  width: 100%;
-  margin: 0;
-  padding: 0;
-}
-.overview-left svg {
-  border-radius: 0.5rem;
-}
-
-.waves {
-  position: relative;
-  width: 100%;
-  height: 30vh;
-  margin-bottom: -7px; /*Fix for safari gap*/
-  min-height: 100px;
-  max-height: 150px;
-}
-
-/* Animation */
-
-.parallax > use {
-  animation: move-forever 25s cubic-bezier(0.55, 0.5, 0.45, 0.5) infinite;
-}
-.parallax > use:nth-child(1) {
-  animation-delay: -2s;
-  animation-duration: 7s;
-}
-.parallax > use:nth-child(2) {
-  animation-delay: -3s;
-  animation-duration: 10s;
-}
-.parallax > use:nth-child(3) {
-  animation-delay: -4s;
-  animation-duration: 13s;
-}
-.parallax > use:nth-child(4) {
-  animation-delay: -5s;
-  animation-duration: 20s;
-}
-@keyframes move-forever {
-  0% {
-    transform: translate3d(-90px, 0, 0);
-  }
-  100% {
-    transform: translate3d(85px, 0, 0);
-  }
-}
-/*Shrinking for mobile*/
-@media (max-width: 768px) {
-  .waves {
-    height: 40px;
-    min-height: 40px;
-  }
-  .content {
-    height: 30vh;
-  }
-  h1 {
-    font-size: 25px !important;
-  }
-  .inner-header p {
-    font-size: 11px !important;
-  }
-}
-/*-------------Admin Access Pass Box------------- */
-#pass-box,
-#pass-box1,
-#pass-box2,
-#pass-box3 {
-  box-sizing: border-box;
-  height: 20%;
-  width: 25%;
-  position: absolute;
-  top: 35%;
-  left: 50%;
-  border-radius: 0.5rem;
-  display: none;
-  padding: 2% !important;
-}
-#confirm-pass {
-  display: none !important;
-}
-/* Delete Button*/
-.delete {
-  float: right;
-}
-/* Drop Down*/
-#dropdown {
-  position: relative;
-  color: #fff;
-}
-#dropdown-content {
-  position: absolute;
-  top: 70%;
-  left: -40%;
-  background: #1d72aa;
-  color: white;
-  border-radius: 0.5rem;
-  padding: 0.5rem;
-  display: none;
-}
-#dropdown-content li {
-  border-bottom: 2px #666 solid;
-}
-.forms-content {
-  background: transparent !important;
-  height: 40vw;
-}
-/*Dashboads Media screen */
-@media screen and (max-width:1406px){
-#dashboard-container{
-  height: 55vh !important;
-}
-#sidenav li{
-  font-size:.8rem ;
-}
 }
