--- a/style.css
+++ b/style.css
@@ -672,3 +672,38 @@ a:hover {
     width: 12.2%;
   }
 }
+
+@media screen and (min-width: 600px) and (max-width: 1024px) {
+    .navbar>.container {
+        align-items: stretch;
+        display: flex;
+        min-height: 3.25rem;
+        width: 100%;
+    }
+    .navbar-burger {
+        display: none;
+    }
+    .navbar-menu {
+        background-color: transparent;
+        box-shadow: none;
+        padding: 0;
+        justify-content: flex-end;
+        flex-grow: 1;
+        flex-shrink: 0;
+    }
+    .navbar, .navbar-end, .navbar-menu, .navbar-start {
+        display: flex;
+        align-items: stretch;
+    }
+
+    .navbar-end {
+    	justify-content: flex-end;
+    margin-left: auto;
+    }
+
+    .navbar-item {
+        display: flex;
+        align-items: center;
+    }
+}
+
